@@ -26,9 +26,10 @@ project_lib_DATA = start.$(OBJEXT)
 dist_project_lib_DATA += startup/linkcmds
 
 startup_SOURCES = ../../shared/bspclean.c ../../shared/bsplibc.c \
-    ../../shared/bsppredriverhook.c \
-    ../../shared/bsppost.c startup/bspstart.c ../../shared/bootcard.c \
-    ../../shared/sbrk.c ../../shared/gnatinstallhandler.c startup/__main.c
+    ../../shared/bsppredriverhook.c ../../shared/bsppretaskinghook.c \
+    startup/bspgetworkarea.c ../../shared/bsppost.c startup/bspstart.c \
+    ../../shared/bootcard.c ../../shared/sbrk.c \
+    ../../shared/gnatinstallhandler.c startup/__main.c
 clock_SOURCES = ../../shared/clock_driver_stub.c
 console_SOURCES = ../../shared/console-polled.c console/console-io.c
 timer_SOURCES = ../../shared/timerstub.c
