@@ -4,19 +4,20 @@
  *  $Id$
  */
 
+typedef void (*pfunc) (void);
+extern pfunc __ctors[];
+extern pfunc __ctors_end[];
+
 void __main (void)
 {
   static int initialized;
-  if (! initialized)
-    {
-      typedef void (*pfunc) (void);
-      extern pfunc __ctors[];
-      extern pfunc __ctors_end[];
-      pfunc *p;
+  pfunc *p;
 
-      initialized = 1;
-      for (p = __ctors_end; p > __ctors; )
-	(*--p) ();
+  if (initialized)
+    return;
 
-    }
+  initialized = 1;
+  for (p = __ctors_end; p > __ctors; )
+    (*--p) ();
+
 }
